--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -1,28 +1,66 @@
-.profile-picture { border: 2px  solid black;
-                   border-radius: 5px;
-                   float: left;
-	               padding: 5px;
-	              
-                 }
+.main-container {
+    position: relative;
+    width: 600px;
+    height: 300px;
+}
 
-#pic { width:200px;
-       height:200px;
-     }
-     
+.profile-picture {
+    position: absolute;
+    left: 0;
+    width: 215px;
+    height: 215px;
+    
+    border: 2px solid #eee;
+    border-radius: 5px;
+}
+
+#pic { 
+    width:200px;
+    height:200px;
+    margin: 2.5px;
+}
 
 .info-container { 
-             float: right;
-             border: 2px solid black;
-             border-radius: 5px;
-           }
+    position: absolute;
+    right: 0;
+    width: 345px;
+    margin: auto;
+    
+    border: 2px solid #eee;
+    border-radius: 5px;
+}
 
-#name-header { background-color: #E0E0E0; }
-                
-.separator { border-bottom: 1px solid #D0D0D0; }
+#name-header { background-color: #f5f5f5; }
+
+h4 {
+    margin-top: 0px;
+    margin-bottom: 5px;
+    padding-top: 5px;   
+    padding-left: 5px;
+}
+
+.separator {
+    border-bottom: 1px solid #eee;
+    padding-top: 5px;
+    padding-left: 5px;
+}
+
+p {
+    margin: 0 0 10px;
+    padding-left: 5px;
+}
+
+
+dl {
+    margin-top: 0;
+    margin-bottom: 10px;
+}
 
 dt {
     float: left;
     clear: left;
-    text-align: left;
-    font-weight: bold;
-  }
+    margin-left: 5px;
+    line-height: 2;
+}
+
+dd { line-height: 2;}
